[package]
name = "keyby"
version = "0.2.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Max-Meldrum/keyby"
homepage = "https://github.com/Max-Meldrum/keyby"
description = """
A library for hashing on specific Struct fields
"""
license = "MIT"

[dependencies]
syn = "0.15.38"
quote = "0.6.3"
proc-macro2 = "0.4"

[lib]
proc-macro = true
